recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:5: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
  	pentaKoch(levels-1,length*0,4)
                 ^PentaKoch:7: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
  	pentaKoch(levels-1,length*0,4)
                 ^PentaKoch:9: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
  	pentaKoch(levels-1,length*0,4)
                 ^PentaKoch:11: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
  	pentaKoch(levels-1,length*0,4)
                 ^PentaKoch:13: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
  	pentaKoch(levels-1,length*0,4)
                 ^